feat(server, docs): Add ListItems endpoint (#11)
* feat(server, docs): Add ListItems endpoint

* microseconds

* update Dockerfile
